avoiding a bizarre border-radius bug on mobile safari

--- a/assets/src/css/less/components/cards.less
+++ b/assets/src/css/less/components/cards.less
@@ -1,8 +1,6 @@
 .card {
     background: shade(white, 0.6%);
     border-top: solid 8px shade(white, 25%);
-    border-top-left-radius: 1px;
-    border-top-right-radius: 1px;
     box-shadow: 0px 0px 0px rgba(0,0,0,0.25);
     margin-bottom: 1.5em;
     .transition(all 0.1s ease-out);
